# Repo_test_owasp2

./: README.md
compiled-codeql-dataset/: semgrep.sarif  (+2 more)
cpp_codeql/: CMakeLists.txt
cpp_codeql/Security/CWE/CWE-014/: MemsetMayBeDeleted-bad.cpp  MemsetMayBeDeleted-good.cpp
cpp_codeql/Security/CWE/CWE-020/: ExternalAPITaintStepExample.cpp
cpp_codeql/Security/CWE/CWE-089/: SqlTainted.cpp
cpp_codeql/Security/CWE/CWE-119/: OverflowBuffer.cpp  OverrunWriteProductFlow.cpp
cpp_codeql/Security/CWE/CWE-120/: OverrunWrite.cpp  OverrunWriteFloat.cpp
cpp_codeql/Security/CWE/CWE-131/: NoSpaceForZeroTerminator.cpp
cpp_codeql/Security/CWE/CWE-190/: ArithmeticUncontrolled.cpp  ArithmeticWithExtremeValues.cpp  ComparisonWithWiderType.cpp  TaintedAllocationSize.cpp
cpp_codeql/Security/CWE/CWE-193/: InvalidPointerDeref.cpp
cpp_codeql/Security/CWE/CWE-295/: SSLResultConflationBad.cpp  SSLResultConflationGood.cpp  SSLResultNotCheckedBad.cpp  SSLResultNotCheckedGood.cpp
cpp_codeql/Security/CWE/CWE-319/: UseOfHttp.cpp
cpp_codeql/Security/CWE/CWE-326/: InsufficientKeySize.cpp
cpp_codeql/Security/CWE/CWE-367/: TOCTOUFilesystemRaceBad.cpp  TOCTOUFilesystemRaceGood.cpp
cpp_codeql/Security/CWE/CWE-416/: UseOfStringAfterLifetimeEndsGood.cpp
cpp_codeql/Security/CWE/CWE-468/: IncorrectPointerScaling.cpp  IncorrectPointerScalingVoid.cpp  SuspiciousAddWithSizeof.cpp
cpp_codeql/Security/CWE/CWE-497/: ExposedSystemDataCorrect.cpp  ExposedSystemDataIncorrect.cpp  PotentiallyExposedSystemDataIncorrect.cpp
cpp_codeql/Security/CWE/CWE-570/: IncorrectAllocationErrorHandling.cpp
(+1375 files in other folders)
